feat: gen worker - use wan2.1

--- a/weten_model_d_be/gen-worker/requirements.txt
+++ b/weten_model_d_be/gen-worker/requirements.txt
@@ -1,1 +1,19 @@
-runpod==1.7.7
+runpod>=1.6.0
+torch>=2.0.0
+torchvision
+torchaudio
+transformers>=4.35.0
+diffusers>=0.24.0
+accelerate>=0.24.0
+xformers
+opencv-python
+pillow
+numpy
+requests
+huggingface-hub
+safetensors
+einops
+moviepy
+imageio
+imageio-ffmpeg
+supabase>=2.0.0
