--- a/weten_model_d_be/gen-worker/Dockerfile
+++ b/weten_model_d_be/gen-worker/Dockerfile
@@ -1,10 +1,42 @@
-FROM python:3.10-slim
+# Use NVIDIA CUDA base image
+FROM nvidia/cuda:11.8-devel-ubuntu22.04
 
-WORKDIR /
-COPY requirements.txt /requirements.txt
-RUN pip install -r requirements.txt
-COPY rp_handler.py /
-COPY test_input.json /
+# Set environment variables
+ENV DEBIAN_FRONTEND=noninteractive
+ENV PYTHONUNBUFFERED=1
 
-# Start the container
-CMD ["python3", "-u", "rp_handler.py"]
+# Install system dependencies
+RUN apt-get update && apt-get install -y \
+    python3 \
+    python3-pip \
+    python3-dev \
+    wget \
+    curl \
+    git \
+    ffmpeg \
+    && rm -rf /var/lib/apt/lists/*
+
+# Set working directory
+WORKDIR /app
+
+# Copy requirements first for better caching
+COPY requirements.txt .
+
+# Install Python dependencies
+RUN pip3 install --no-cache-dir -r requirements.txt
+
+# Copy application code
+COPY . .
+
+# Create necessary directories
+RUN mkdir -p /app/outputs /app/cache
+
+# Set environment variables for model caching
+ENV TRANSFORMERS_CACHE=/app/cache
+ENV HF_HOME=/app/cache
+
+# Expose port (optional, RunPod handles this)
+EXPOSE 8000
+
+# Set the entry point
+CMD ["python3", "handler.py"]
