--- a/weten_model_d_be/gen-worker/docker-compose.yml
+++ b/weten_model_d_be/gen-worker/docker-compose.yml
@@ -4,4 +4,7 @@ services:
   gen-worker:
     build: .
     container_name: gen-worker
+    environment:
+      - SUPABASE_URL=${SUPABASE_URL}
+      - SUPABASE_ANON_KEY=${SUPABASE_ANON_KEY}
     restart: unless-stopped
