--- a/gen-worker/requirements.txt
+++ b/gen-worker/requirements.txt
@@ -1,19 +1,11 @@
 runpod>=1.6.0
-torch>=2.0.0
+torch>=2.4.0
 torchvision
-torchaudio
-transformers>=4.35.0
-diffusers>=0.24.0
-accelerate>=0.24.0
-xformers
-opencv-python
-pillow
 numpy
-requests
+pillow
 huggingface-hub
-safetensors
-einops
-moviepy
+transformers
+accelerate
+supabase>=2.0.0
 imageio
 imageio-ffmpeg
-supabase>=2.0.0
