--- a/gen-worker/requirements.txt
+++ b/gen-worker/requirements.txt
@@ -1,32 +1,29 @@
 # Core Application & RunPod
-runpod>=1.6.0
-supabase>=2.0.0
+runpod==1.7.0
+supabase==2.7.4
 
-# Modelscope & Dependencies from your file
-modelscope==1.9.5
-datasets==2.13.0
-torch>=2.4.0
-torchvision
-numpy
-pillow
-huggingface-hub
-transformers
-accelerate
-imageio
-imageio-ffmpeg
+# Diffusers and Wan2.1 dependencies (official method)
+diffusers==0.30.3
+# torch and torchvision installed separately in Dockerfile with CUDA support
 
-# Dependencies from Wan2.1
-decord
-omegaconf
-av
-pytorch-lightning
-einops
+# Core ML/AI packages - compatible with torch 2.4.0
+numpy==1.24.4
+pillow==10.0.1
+huggingface-hub==0.19.4
+transformers==4.36.2
+accelerate==0.25.0
+safetensors==0.4.1
+sentencepiece==0.1.99
 
-# Other common supporting packages
-opencv-python-headless
-timm
-safetensors
-sentencepiece
-addict
-future
-yapf
+# Media processing
+imageio==2.31.6
+imageio-ffmpeg==0.4.9
+opencv-python-headless==4.8.1.78
+
+# Configuration and utilities
+omegaconf==2.3.0
+addict==2.4.0
+future==0.18.3
+
+# ML framework support
+einops==0.7.0
