--- a/gen-worker/requirements.txt
+++ b/gen-worker/requirements.txt
@@ -1,29 +1,34 @@
-# Core Application & RunPod
+# Core Application & RunPodAdd commentMore actions
 runpod==1.7.0
 supabase==2.7.4
 
-# Diffusers and Wan2.1 dependencies (official method)
-diffusers==0.30.3
-# torch and torchvision installed separately in Dockerfile with CUDA support
-
-# Core ML/AI packages - compatible with torch 2.4.0
+# Modelscope & Dependencies from your file
+modelscope==1.9.5
+datasets==2.13.0
+torch>=2.4.0
+torchvision
 numpy==1.24.4
 pillow==10.0.1
 huggingface-hub==0.33.0
 transformers==4.36.2
 accelerate==0.25.0
-safetensors==0.4.1
-sentencepiece==0.1.99
-
-# Media processing
 imageio==2.31.6
 imageio-ffmpeg==0.4.9
-opencv-python-headless==4.8.1.78
 
-# Configuration and utilities
+# Dependencies from Wan2.1
+decord
 omegaconf==2.3.0
-addict==2.4.0
-future==0.18.3
-
-# ML framework support
+av
+pytorch-lightning
 einops==0.7.0
+
+
+
+# Other common supporting packages
+opencv-python-headless==4.8.1.78
+timm
+safetensors==0.4.1
+sentencepiece==0.1.99
+addictt==2.4.0
+future==0.18.3
+yapf
